--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-asgiref
+asgiref==3.5.2
+boto3==1.26.105
+botocore==1.29.105
 certifi==2021.5.30
 charset-normalizer==2.0.4
 dj-database-url==0.5.0
@@ -7,11 +9,17 @@ django-heroku==0.3.1
 django-storages==1.11.1
 gunicorn==20.1.0
 idna==3.2
+jmespath==1.0.1
+mysqlclient==2.1.1
 Pillow==9.3.0
+psycopg2==2.9.5
 psycopg2-binary==2.9.5
+PyMySQL==1.0.3
+python-dateutil==2.8.2
 python-decouple==3.4
 pytz==2021.1
 requests==2.26.0
+s3transfer==0.6.0
 six==1.16.0
 sqlparse==0.4.1
 typing-extensions==3.10.0.0
